Added more sturcture and text

--- a/index.html
+++ b/index.html
@@ -13,19 +13,44 @@
     <div class="container">
 
         <!-- left column -->
-        <div class="left-column"></div>
+        <div class="left-column">
+
+            <div class="image">
+                <img src="images/diary2.png" alt="">
+            </div>
+
+            <div class="name">
+                <h2>Aditya Chandel</h2>
+            </div>
+
+        </div>
 
         <!-- right column -->
         <div class="right-column">
 
-            <div class="heading">
-                <h3>Dev Diary</h3>
-            </div>
+            <div class="page">
 
-            <hr>
+                <div class="heading">
+                    <h3>Dev Diary</h3>
+                </div>
 
-            <div class="image">
-                <img src="images/diary.jpg" alt="diary-img">
+                <hr>
+
+                <div class="image">
+                    <img src="images/diary.jpg" alt="diary-img">
+                </div>
+
+                <div class="text-content">
+                    <p>Personal bits of learning, open for everyone :)</p>
+
+                    <ul>
+                        <li>🛠️ Explore this <a href="">Dev Diary on GitHub.</a> And <a href="">Star it on Github</a> if
+                            you find it useful!</li>
+                        <li>🗺️ Explore any topic you find interesting on the list!</li>
+                        <li>📣 <a href="">Reach out</a> if you want to chat!</li>
+                    </ul>
+                </div>
+
             </div>
 
         </div>
