Finished working on intro page

--- a/index.html
+++ b/index.html
@@ -44,11 +44,37 @@
                     <p>Personal bits of learning, open for everyone :)</p>
 
                     <ul>
-                        <li>🛠️ Explore this <a href="">Dev Diary on GitHub.</a> And <a href="">Star it on Github</a> if
+                        <li>🛠️ Explore this <a href="https://github.com/TonyStark-19/Dev-Diary">Dev Diary on
+                                GitHub.</a> And <a href="https://github.com/TonyStark-19/Dev-Diary">Star it on
+                                Github</a> if
                             you find it useful!</li>
+                        <li>🚀 This Dev Diary documents my journey through coding, sharing projects, lessons learned,
+                            and
+                            tips for fellow learners.</li>
                         <li>🗺️ Explore any topic you find interesting on the list!</li>
-                        <li>📣 <a href="">Reach out</a> if you want to chat!</li>
+                        <li>📣 <a href="https://tonystark-19.github.io/Portfolio-Website/">Reach out</a> if you want to
+                            chat!</li>
+                        <li>💬 Got feedback or ideas? <a href="https://github.com/TonyStark-19/Dev-Diary/issues">Create
+                                an issue on GitHub</a>!</li>
                     </ul>
+                </div>
+
+                <hr>
+
+                <div class="images-links">
+
+                    <p>Photes by <a href="https://www.pexels.com/">pexels</a> and <a
+                            href="https://pngtree.com/">pngtree.</a></p>
+
+                </div>
+
+                <hr>
+
+                <div class="footer">
+
+                    <p>Project inspiration : <a href="https://handbook.davidgasquez.com/README">Handbook</a> by <a
+                            href="https://github.com/davidgasquez">David Gasquez</a></p>
+
                 </div>
 
             </div>
