Added list items and search box

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Diary</title>
+    <!-- font awesome link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,6 +25,103 @@
 
             <div class="name">
                 <h2>Aditya Chandel</h2>
+            </div>
+
+            <div class="search-box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Search page....">
+            </div>
+
+            <div class="search-list-container">
+
+                <div class="search-list-item">
+                    <p>Introduction</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Consistency</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>How to start?</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Procastination</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Time management</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Podcast</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Youtube channels</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Networking</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Project building</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Problem solving</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Dedication</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Git & Github</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Mental health</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Physical list</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Productivity</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Awareness</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Competition</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Chatgpt</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Hobbies</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Music</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>My coding journey</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Mindset</p>
+                </div>
+
             </div>
 
         </div>
