Started working on separate pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="name">
-                <h2>Aditya Chandel</h2>
+                <h2>Aditya chandel</h2>
             </div>
 
             <div class="search-box">
@@ -35,7 +35,7 @@
             <div class="search-list-container">
 
                 <div class="search-list-item">
-                    <p>Introduction</p>
+                    <p>What is Dev Diary?</p>
                 </div>
 
                 <div class="search-list-item">
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="search-list-item">
-                    <p>Physical list</p>
+                    <p>Physical health</p>
                 </div>
 
                 <div class="search-list-item">
@@ -122,6 +122,26 @@
                     <p>Mindset</p>
                 </div>
 
+                <div class="search-list-item">
+                    <p>Curiosity</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>journey</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Skills</p>
+                </div>
+
+                <div class="search-list-item">
+                    <p>Soft Skills</p>
+                </div>
+
+            </div>
+
+            <div class="not-found">
+                Oops! We couldn't find what you're looking for. Try a different keyword!
             </div>
 
         </div>
@@ -129,7 +149,7 @@
         <!-- right column -->
         <div class="right-column">
 
-            <div class="page">
+            <div class="page hidden" id="Dev-Diary">
 
                 <div class="heading">
                     <h3>Dev Diary</h3>
@@ -153,9 +173,11 @@
                             and
                             tips for fellow learners.</li>
                         <li>🗺️ Explore any topic you find interesting on the list!</li>
-                        <li>📣 <a href="https://tonystark-19.github.io/Portfolio-Website/">Reach out</a> if you want to
+                        <li>📣 <a target="_blank" href="https://tonystark-19.github.io/Portfolio-Website/">Reach out</a>
+                            if you want to
                             chat!</li>
-                        <li>💬 Got feedback or ideas? <a href="https://github.com/TonyStark-19/Dev-Diary/issues">Create
+                        <li>💬 Got feedback or ideas? <a target="_blank"
+                                href="https://github.com/TonyStark-19/Dev-Diary/issues">Create
                                 an issue on GitHub</a>!</li>
                     </ul>
                 </div>
@@ -164,7 +186,7 @@
 
                 <div class="images-links">
 
-                    <p>Photes by <a href="https://www.pexels.com/">pexels</a> and <a
+                    <p>Photes by <a target="_blank" href="https://www.pexels.com/">pexels</a> and <a target="_blank"
                             href="https://pngtree.com/">pngtree.</a></p>
 
                 </div>
@@ -173,16 +195,106 @@
 
                 <div class="footer">
 
-                    <p>Project inspiration : <a href="https://handbook.davidgasquez.com/README">Handbook</a> by <a
+                    <p>Project inspiration : <a target="_blank"
+                            href="https://handbook.davidgasquez.com/README">Handbook</a> by <a target="_blank"
                             href="https://github.com/davidgasquez">David Gasquez</a></p>
 
                 </div>
 
             </div>
 
+            <div class="page" id="Consistency">
+
+                <div class="heading">
+                    <h3>Consistency : </h3>
+                </div>
+
+                <hr>
+
+                <div class="text-content">
+
+                    <p>Consistency is a cornerstone of success, and <a href="">my coding journey</a> has been a
+                        testament to this
+                        principle. Taking on the #100DaysOfCode challenge was one of the best decisions I’ve made—it
+                        gave me the structure and accountability to stay on track.</p>
+
+                    <p>Consistency is a cornerstone of success, and my coding journey has been a testament to this
+                        principle.</p>
+                    <ul>
+                        <li>Taking on the <strong>#100DaysOfCode</strong> challenge was one of the best decisions
+                            I’ve made—it gave me the structure and accountability to stay on track.</li>
+
+                        <li>By coding every single
+                            day and sharing my progress on <a href="">LinkedIn</a> and <a href="">Twitter</a>, the habit
+                            became second nature.</li>
+                        <li>At
+                            first,
+                            it required effort and discipline, but over time, it evolved into something I genuinely
+                            looked
+                            forward to, like a positive addiction. Each day, as I posted my updates and saw my growth, I
+                            felt motivated to keep going.</li>
+                    </ul>
+
+                    <p>Consistency is not just about showing up; it’s about showing up with intent and focus. When you
+                        commit to improving, even by just one percent every day, you set yourself apart.</p>
+                    <ul>
+                        <li>Over time,
+                            these small, consistent efforts compound, placing you in the top one percent of achievers in
+                            your field.</li>
+                        <li>It’s easy to be motivated on day one, but it’s consistency on days 50, 75, or 100
+                            that truly builds expertise and confidence.</li>
+                    </ul>
+
+                    <p>For anyone struggling with consistency, my advice is simple: don’t overthink it, and don’t wait
+                        for the “perfect moment.” Start where you are with what you have. Challenges like
+                        <strong>#100DaysOfCode</strong> are invaluable because they create an environment of
+                        accountability and progress. The trick is to make it a part of your daily routine—whether it’s
+                        coding, writing, learning, or any skill you want to improve.
+                    </p>
+
+                    <p>The beauty of consistency is that it rewires your mindset. Over time, it stops being a chore and
+                        becomes a lifestyle. With each step forward, you’re not just improving your skills; you’re also
+                        building resilience, self-discipline, and a sense of achievement. It’s a powerful cycle—progress
+                        fuels motivation, and motivation sustains consistency.</p>
+
+                    <p>Remember, you don’t need to be perfect; you just need to keep moving. Success isn’t built on
+                        monumental leaps but on the steady and persistent steps you take every single day.</p>
+
+                </div>
+
+            </div>
+
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+            <div class="page hidden"></div>
+
         </div>
 
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 
