Added two more list items and added more anchor links in pages

--- a/index.html
+++ b/index.html
@@ -190,6 +190,24 @@
                     </a>
                 </div>
 
+                <div class="search-list-item">
+                    <a href="#Burnout">
+                        <p>Burnout</p>
+                    </a>
+                </div>
+
+                <div class="search-list-item">
+                    <a href="#Growth">
+                        <p>Growth</p>
+                    </a>
+                </div>
+
+                <div class="search-list-item">
+                    <a href="#Discipline">
+                        <p>Discipline</p>
+                    </a>
+                </div>
+
             </div>
 
             <div class="not-found">
@@ -286,12 +304,14 @@
                                 became second nature.</li>
                             <li>At
                                 first,
-                                it required effort and discipline, but over time, it evolved into something I
+                                it required effort and <a href="">discipline</a>, but over time, it evolved into
+                                something I
                                 genuinely
                                 looked
                                 forward to, like a positive addiction. Each day, as I posted my updates and saw my
-                                growth, I
-                                felt motivated to keep going.</li>
+                                <a href="">growth</a>, I
+                                felt motivated to keep going.
+                            </li>
                         </ul>
 
                         <li>
@@ -333,7 +353,8 @@
                                 becomes a lifestyle. With each step forward, you’re not just improving your skills;
                                 you’re
                                 also
-                                building resilience, self-discipline, and a sense of achievement. It’s a powerful
+                                building resilience, <a href="">self-discipline</a>, and a sense of achievement. It’s a
+                                powerful
                                 cycle—progress
                                 fuels motivation, and motivation sustains consistency.</p>
                         </li>
@@ -397,7 +418,8 @@
                             <li>Once you take the leap, you'll realize that what once felt overwhelming slowly
                                 integrates into your routine, becoming a natural and fulfilling part of your life.</li>
 
-                            <li>You don’t have to be perfect or even particularly skilled when you start—you just have
+                            <li>You don’t have to be perfect or even particularly <a href="">skilled</a> when you
+                                start—you just have
                                 to
                                 begin.</li>
                         </ul>
@@ -412,8 +434,10 @@
                             <li>The first day might be messy, challenging, or uncertain, but it sets you on a path of
                                 progress and builds momentum.</li>
 
-                            <li>As you continue, you'll not only learn and grow, but you’ll also develop resilience,
-                                discipline, and confidence.</li>
+                            <li>As you continue, you'll not only learn and <a href="">grow</a>, but you’ll also develop
+                                resilience,
+                                <a href="">discipline</a>, and confidence.
+                            </li>
 
                             <li>The journey of starting is less about perfection and more about persistence, and before
                                 you know it, you’ll look back and see how far you’ve come.</li>
@@ -452,7 +476,8 @@
                         <li>
                             <p>Procrastination is often seen as a harmless habit, but its impact on <a
                                     href="">productivity</a>,
-                                learning, and personal growth can be significant. It is the tendency to delay tasks
+                                learning, and <a href="">personal growth</a> can be significant. It is the tendency to
+                                delay tasks
                                 despite knowing that doing so might lead to stress, poor performance, or missed
                                 opportunities.</p>
                         </li>
@@ -462,7 +487,8 @@
                                 sense of comfort in having more time than is actually available</li>
 
                             <li>However, this habit can trap individuals in a cycle of unpreparedness and mediocrity, as
-                                last-minute efforts rarely match the quality of work achieved through consistent,
+                                last-minute efforts rarely match the quality of work achieved through <a
+                                    href="">consistent</a>,
                                 deliberate action.</li>
                         </ul>
 
@@ -568,7 +594,8 @@
                                 efforts are often underestimated,
                                 yet they have the potential to yield significant results over time.</li>
 
-                            <li><a href="">Consistency</a> is key, as it fosters discipline and allows you to make
+                            <li><a href="">Consistency</a> is key, as it fosters <a href="">discipline</a> and allows
+                                you to make
                                 progress steadily
                                 without feeling overwhelmed.</li>
                         </ul>
@@ -590,7 +617,8 @@
 
                             <li>Starting small, such as dedicating a short period daily to focused work, can gradually
                                 build your endurance for longer, more intensive sessions. This incremental approach
-                                reduces the risk of burnout and makes the journey less daunting.</li>
+                                reduces the risk of <a href="">burnout</a> and makes the <a href="">journey</a> less
+                                daunting.</li>
                         </ul>
 
                         <li>
@@ -608,7 +636,7 @@
                         <li>
                             <p>Ultimately, managing your time effectively is not just about getting things done but
                                 about designing a life that aligns with your aspirations, ensuring that every moment
-                                spent contributes meaningfully to your growth and happiness.</p>
+                                spent contributes meaningfully to your <a href="">growth</a> and happiness.</p>
                         </li>
 
                     </ul>
@@ -639,7 +667,7 @@
 
                         <li>
                             <p>Podcasts are a dynamic and enriching medium for personal development, offering an
-                                accessible way to learn, grow, and gain inspiration.</p>
+                                accessible way to learn, <a href="">grow</a>, and gain inspiration.</p>
                         </li>
 
                         <ul class="inner-list">
@@ -665,7 +693,7 @@
 
                         <ul class="inner-list">
                             <li>Such lessons can help you reflect on your own life, refine your decision-making, and
-                                develop a more thoughtful, growth-oriented perspective.</li>
+                                develop a more thoughtful, <a href="">growth-oriented</a> perspective.</li>
 
                             <li> Moreover, podcasts encourage rational and intentional thinking, offering guidance in
                                 areas such as <a href="">time management</a>, emotional resilience, and goal-setting.
@@ -678,7 +706,7 @@
                         </li>
 
                         <ul class="inner-list">
-                            <li>hether you're exploring success stories, seeking practical tips, or simply looking for
+                            <li>Either you're exploring success stories, seeking practical tips, or simply looking for
                                 motivation, podcasts provide an immersive and transformative experience.</li>
                         </ul>
 
@@ -725,7 +753,7 @@
                             <p>YouTube channels are a transformative resource in today's digital age, offering a wealth
                                 of information and opportunities for <a href="">skill</a> development to anyone willing
                                 to invest their
-                                time and dedication.</p>
+                                time and <a href="">dedication.</a></p>
                         </li>
 
                         <ul class="inner-list">
@@ -750,7 +778,8 @@
                                 that knowledge <a href="">consistently.</a></li>
 
                             <li>With YouTube, the barriers to learning are reduced significantly, empowering individuals
-                                to achieve their goals, learn new <a href="">skills</a>, and explore their passions at
+                                to achieve their <a href="">goals</a>, learn new <a href="">skills</a>, and explore
+                                their passions at
                                 their own pace.
                             </li>
                         </ul>
@@ -797,7 +826,8 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p>Networking is an essential component for career growth, particularly in fields like tech.
+                            <p>Networking is an essential component for <a href="">career growth</a>, particularly in
+                                fields like tech.
                                 It allows you to connect with like-minded individuals who share similar goals, ideas,
                                 and <a href="">skills.</a></p>
                         </li>
@@ -1337,6 +1367,90 @@
 
                 <div class="heading">
                     <h3>Soft Skills : </h3>
+                </div>
+
+                <hr>
+
+                <div class="text-content">
+
+                    <ul class="outer-list">
+
+                        <li>
+                            <p></p>
+                        </li>
+
+                        <ul class="inner-list"></ul>
+
+                    </ul>
+
+                </div>
+
+                <div class="footer">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <div class="page hidden" id="Burnout">
+
+                <div class="heading">
+                    <h3>Burnout : </h3>
+                </div>
+
+                <hr>
+
+                <div class="text-content">
+
+                    <ul class="outer-list">
+
+                        <li>
+                            <p></p>
+                        </li>
+
+                        <ul class="inner-list"></ul>
+
+                    </ul>
+
+                </div>
+
+                <div class="footer">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <div class="page hidden" id="Growth">
+
+                <div class="heading">
+                    <h3>Growth : </h3>
+                </div>
+
+                <hr>
+
+                <div class="text-content">
+
+                    <ul class="outer-list">
+
+                        <li>
+                            <p></p>
+                        </li>
+
+                        <ul class="inner-list"></ul>
+
+                    </ul>
+
+                </div>
+
+                <div class="footer">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <div class="page hidden" id="Discipline">
+
+                <div class="heading">
+                    <h3>Discipline : </h3>
                 </div>
 
                 <hr>
