--- a/index.html
+++ b/index.html
@@ -208,6 +208,12 @@
                     </a>
                 </div>
 
+                <div class="search-list-item">
+                    <a href="#Open-source">
+                        <p>Open source</p>
+                    </a>
+                </div>
+
             </div>
 
             <div class="not-found">
@@ -901,17 +907,76 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>Project building is a vital process for transforming abstract ideas into practical,
+                                real-world applications. It plays a key role in showcasing your <a href="">skills</a>,
+                                deepening your
+                                understanding of the technology, and contributing value to society.</p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>For beginners, starting with small and straightforward projects, such as mini HTML and
+                                CSS designs, is essential.</li>
+
+                            <li>These initial projects, like creating static web pages or simple UI components, help you
+                                build confidence and establish a strong foundation.</li>
+                        </ul>
+
+                        <li>
+                            <p>As you progress, working on slightly more complex projects, such as cloning popular
+                                websites or applications, allows you to mimic professional-level features while learning
+                                best practices.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>For instance, replicating platforms like Amazon, Netflix, or Zomato can provide insight
+                                into responsive design, animations, and efficient code structuring.</li>
+
+                            <li>Through this process, you also develop <a href="">problem-solving</a> skills by
+                                addressing challenges
+                                like layout responsiveness, cross-browser compatibility, and UI/UX refinements.</li>
+                        </ul>
+
+                        <li>
+                            <p>Once you’ve gained proficiency, brainstorming unique ideas is the next step. These ideas
+                                can tackle real-world problems or address gaps in the current market.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Examples include creating tools for <a href="">mental health</a> tracking,
+                                community-building
+                                platforms, or budget management applications. By doing so, you demonstrate creativity
+                                and the ability to innovate.</li>
+                        </ul>
+
+                        <li>
+                            <p>Moreover, engaging in collaborative projects or contributing to <a
+                                    href="">open-source</a> platforms
+                                helps you gain teamwork experience and exposure to diverse coding practices.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Constantly refining your code, exploring emerging technologies, and incorporating user
+                                feedback make your projects even more robust.</li>
+                        </ul>
+
+                        <li>
+                            <p>Ultimately, the continuous cycle of ideating, creating, and refining projects is how you
+                                master new technologies, build a strong portfolio, and make meaningful contributions to
+                                the tech community.</p>
+                        </li>
 
                     </ul>
 
                 </div>
 
+                <hr>
+
                 <div class="footer">
-                    <p></p>
+                    <p>“Ready to start your first project? Check out <a
+                            href="https://github.com/TonyStark-19/HTML-CSS-Projects">My HTML-CSS mini projects repo on
+                            Github!</a>" This repo is filled with numerous HTML-CSS mini projects to begin your web dev
+                        journey.</p>
+                    <p>You can star it if you find it useful!</p>
                 </div>
 
             </div>
@@ -929,17 +994,94 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>Problem-solving is the backbone of programming, essential for tackling real-world
+                                challenges and <a href="">building</a> impactful solutions.</p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>t’s a <a href="">skill</a> that allows developers to analyze problems, devise efficient
+                                solutions, and
+                                write code that addresses complex scenarios.</li>
+
+                            <li>Whether it's designing a robust system, optimizing code for better performance, or
+                                debugging an issue, problem-solving remains a core competency.</li>
+
+                            <li>Beyond just technical ability, it enhances logical thinking, creativity, and
+                                adaptability, making programmers more effective in their roles.</li>
+                        </ul>
+
+                        <li>
+                            <p>For aspiring professionals aiming to join top tech companies like Google, Microsoft, or
+                                Amazon, problem-solving becomes even more critical. These companies place a strong
+                                emphasis on data structures and algorithms (DSA) in their interview processes.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Being proficient in DSA not only improves one’s chances of cracking these interviews but
+                                also sharpens the ability to write efficient, scalable, and optimized code.</li>
+
+                            <li>Mastery of DSA concepts, such as sorting algorithms, dynamic programming, and graph
+                                traversal, equips programmers to think systematically and approach problems from
+                                different angles.</li>
+                        </ul>
+
+                        <li>
+                            <p>To develop strong problem-solving skills, <a href="">consistency</a> is key. Platforms
+                                like <a href="">LeetCode</a>,
+                                <a href="">HackerRank</a>, and <a href="">Codeforces</a> provide a structured way to
+                                practice.
+                            </p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>LeetCode, in particular, offers company-specific problems that mimic real-world coding
+                                challenges, helping learners prepare for interviews.</li>
+
+                            <li>HackerRank, on the other hand, is excellent for sharpening proficiency in specific
+                                programming languages and understanding their nuances.</li>
+
+                            <li>Regular practice on such platforms allows programmers to identify their weaknesses and
+                                gradually improve through perseverance and focus.</li>
+                        </ul>
+
+                        <li>
+                            <p>Rather than focusing on solving a large volume of problems, it is more beneficial to
+                                prioritize quality over quantity. Deeply understanding a few problems and their
+                                solutions builds a stronger foundation than solving many problems superficially.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Taking time to analyze why a solution works and considering alternative approaches
+                                fosters critical thinking.</li>
+
+                            <li>Additionally, engaging with community discussions and code reviews can provide valuable
+                                insights, encouraging collaborative learning and exposure to diverse perspectives.</li>
+                        </ul>
+
+                        <li>
+                            <p>Ultimately, problem-solving is not just a technical skill but a <a href="">mindset</a>.
+                                By committing to
+                                regular practice, breaking down challenges, and continuously learning, programmers can
+                                develop the confidence and resilience needed to tackle even the most daunting tasks.</p>
+                        </li>
+
+                        <li>
+                            <p>Here is <a
+                                    href="https://www.youtube.com/playlist?list=PLfqMhTWNBTe137I_EPQd34TsgV6IO55pt">Apna
+                                    college DSA series playlist</a> which i am following as part of DSA
+                                journey. I can highly recommend this channel for learning DSA to Web development.</p>
+                        </li>
 
                     </ul>
 
                 </div>
 
+                <hr>
+
                 <div class="footer">
-                    <p></p>
+                    <p>"Bill Gates once said, 'I choose a lazy person to do a hard job because they will find an easy
+                        way to do it.' This reflects the power of creative problem-solving in programming."
+                    </p>
                 </div>
 
             </div>
@@ -957,17 +1099,70 @@
                     <ul class="outer-list">
 
                         <li>
-                            <p></p>
+                            <p>Dedication is the cornerstone of success in any area of life. It’s the ability to commit
+                                yourself fully to a task, <a href="">project</a>, or goal and stick with it, even when
+                                faced with
+                                challenges or distractions.</p>
                         </li>
 
-                        <ul class="inner-list"></ul>
+                        <ul class="inner-list">
+                            <li>Dedication goes beyond interest or motivation—it’s about <a href="">discipline</a> and
+                                perseverance. It
+                                means showing up <a href="">consistently</a>, putting in the effort, and focusing on
+                                progress, no
+                                matter how small, every single day.</li>
+                        </ul>
+
+                        <li>
+                            <p>One of the most significant benefits of dedication is its power to build momentum.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>When you commit time and energy to learning a <a href=""> new skill</a>, working on a
+                                project, or
+                                improving yourself, the consistent effort leads to tangible <a href="">growth.</a></li>
+
+                            <li>This steady progress not only increases your confidence but also fuels your passion for
+                                the task at hand, creating a positive feedback loop.</li>
+                        </ul>
+
+                        <li>
+                            <p>Many people make the mistake of relying solely on motivation, which can fluctuate.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>Dedication, on the other hand, is what keeps you moving forward when motivation runs
+                                low. It teaches you the value of discipline—sitting down to work on your goals even when
+                                you don’t feel like it.</li>
+
+                            <li>This habit of persistence is what separates those who achieve their dreams from those
+                                who merely wish for them.</li>
+                        </ul>
+
+                        <li>
+                            <p>Dedication is not about working endlessly; it’s about working intentionally and
+                                consistently.</p>
+                        </li>
+
+                        <ul class="inner-list">
+                            <li>By dedicating yourself to your goals, you can overcome obstacles, develop valuable
+                                skills, and achieve results that might have seemed impossible.</li>
+                        </ul>
+
+                        <li>
+                            <p>The key is to take action now—don’t just plan or dream, but start doing. Over time, your
+                                dedication will compound into meaningful success.</p>
+                        </li>
 
                     </ul>
 
                 </div>
 
+                <hr>
+
                 <div class="footer">
-                    <p></p>
+                    <p>"Dedication is doing what needs to be done, even when you don't feel like doing it."</p>
+                    <p>Ready to apply dedication to your goals? Start Now!</p>
                 </div>
 
             </div>
@@ -1451,6 +1646,34 @@
 
                 <div class="heading">
                     <h3>Discipline : </h3>
+                </div>
+
+                <hr>
+
+                <div class="text-content">
+
+                    <ul class="outer-list">
+
+                        <li>
+                            <p></p>
+                        </li>
+
+                        <ul class="inner-list"></ul>
+
+                    </ul>
+
+                </div>
+
+                <div class="footer">
+                    <p></p>
+                </div>
+
+            </div>
+
+            <div class="page hidden" id="Open-source">
+
+                <div class="heading">
+                    <h3>Open source : </h3>
                 </div>
 
                 <hr>
